--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,9 @@ a {
 button {
 	border: 0;
 }
+input, textarea {
+	outline: none;
+}
 body {
 	font-family: "Roboto", sans-serif;
 	line-height: 1.333;
@@ -433,7 +436,186 @@ h3 {
 	color: var(--light);
 }
 svg.icon {
+	fill: currentColor;
+}
+
+.modal-overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	z-index: 999;
+	/* opacity: 0; */
+	/* pointer-events: none; */
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	background-color: rgba(46, 47, 66, 0.4);
+}
+
+/* .modal-overlay.is-open {
+	opacity: 1;
+	pointer-events: auto;
+} */
+
+.modal-overlay .form-group {
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+	width: 100%;
+	margin-top: 24px;
+	border: 0;
+}
+
+.modal-overlay .form-label {
+	display: flex;
+	flex-direction: column;
+	gap: 4px;
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 1.2;
+	letter-spacing: 0.04em;
+	color: var(--subtle-text);
+}
+.modal-overlay svg.icon {
+	color: var(--dark);
+}
+
+.modal-overlay .form-label.terms {
+	flex-direction: row;
+	width: 100%;
+}
+
+.modal-overlay .form-input:not([type="checkbox"]) {
+	position: relative;
+	width: 100%;
+	height: 40px;
+	padding: 8px 16px 8px 38px;
+	border-radius: 4px;
+	color: var(--dark);
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	border: 1px solid rgba(46, 47, 66, 0.4);
+}
+
+.modal-overlay .form-input[type="checkbox"] {
 	width: 16px;
 	height: 16px;
-	fill: currentColor;
+	margin-right: 4px;
+	border-radius: 2px;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	border: 1px solid rgba(46, 47, 66, 0.4);
+}
+
+.modal-overlay .form-input[type="checkbox"]:checked {
+	background-color: var(--pressed);
+}
+
+.modal-overlay .terms {
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 1.3;
+	letter-spacing: 0.04em;
+	color: var(--subtle-text);
+}
+.modal-overlay .terms a {
+	text-decoration: underline;
+	color: var(--primary);
+}
+
+.modal-overlay .input-container {
+	display: flex;
+	align-items: center;
+}
+
+.modal-overlay .input-container .icon {
+	position: absolute;
+	margin-left: 16px;
+}
+
+.modal-overlay .form-input::placeholder {
+	color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-overlay .form-label textarea.form-input {
+	height: 120px;
+	padding: 8px 16px;
+	resize: none;
+}
+
+.modal-overlay button[type="submit"] {
+	display: flex;
+	align-self: center;
+	justify-self: center;
+	justify-content: center;
+	align-items: center;
+	width: 169px;
+	height: 56px;
+	margin-top: 24px;
+	color: var(--white);
+	border-radius: 4px;
+	box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	background-color: var(--primary);
+}
+
+.modal-overlay button[type="submit"]:hover {
+	cursor: pointer;
+	background-color: var(--pressed);
+}
+
+.modal-overlay .form-label .form-input:focus,
+.modal-overlay .form-label .form-input:focus-visible,
+.modal-overlay .form-label .form-input:active {
+	border: 1px solid var(--primary);
+}
+
+.modal-overlay .form-input:focus ~ .icon,
+.modal-overlay .form-input:active ~ .icon,
+.modal-overlay .form-input:focus-visible ~ .icon {
+	color: var(--primary);
+}
+
+.modal-overlay .close {
+	display: flex;
+	align-self: end;
+	justify-content: center;
+	align-items: center;
+	width: 24px;
+	height: 24px;
+	border-radius: 50%;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	background-color: var(--accent);
+}
+
+.modal-overlay .close:hover {
+	cursor: pointer;
+	fill: var(--white);
+	background-color: var(--pressed);
+}
+
+.modal-overlay .form-group .group-title {
+	text-align: center;
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	margin-bottom: 8px;
+	color: var(--dark);
+}
+
+.modal-overlay .modal {
+	display: flex;
+	flex-direction: column;
+	max-width: 408px;
+	max-height: 584px;
+	padding: 24px;
+	border-radius: 4px;
+	overflow-y: auto;
+	box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
+									0px 1px 3px 0px rgba(0, 0, 0, 0.12),
+									0px 2px 1px 0px rgba(0, 0, 0, 0.2);
+	background-color: var(--modal);
 }
