--- a/css/styles.css
+++ b/css/styles.css
@@ -449,16 +449,16 @@ svg.icon {
 	width: 100%;
 	height: 100%;
 	z-index: 999;
-	/* opacity: 0; */
-	/* pointer-events: none; */
+	opacity: 0;
+	pointer-events: none;
 	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	background-color: rgba(46, 47, 66, 0.4);
 }
 
-/* .modal-overlay.is-open {
+.modal-overlay.is-open {
 	opacity: 1;
 	pointer-events: auto;
-} */
+}
 
 .modal-overlay .form-group {
 	display: flex;
@@ -504,12 +504,31 @@ svg.icon {
 	height: 16px;
 	margin-right: 4px;
 	border-radius: 2px;
+	-webkit-appearance: none;
+    -moz-appearance: none;
+    -o-appearance: none;
+    appearance: none;
 	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	border: 1px solid rgba(46, 47, 66, 0.4);
 }
 
+.modal-overlay .checkbox-container {
+	display: flex;
+	align-items: center;
+}
+
+.modal-overlay .checkbox-container .icon {
+	position: absolute;
+	opacity: 0;
+	margin: 4px 4px 4px 3px;
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .modal-overlay .form-input[type="checkbox"]:checked {
 	background-color: var(--pressed);
+}
+.modal-overlay .form-input[type="checkbox"]:checked ~ .icon {
+	opacity: 1;
 }
 
 .modal-overlay .terms {
@@ -618,4 +637,9 @@ svg.icon {
 									0px 1px 3px 0px rgba(0, 0, 0, 0.12),
 									0px 2px 1px 0px rgba(0, 0, 0, 0.2);
 	background-color: var(--modal);
+}
+
+.modal-overlay .modal form {
+	display: flex;
+    flex-direction: column;
 }
