--- a/css/styles.css
+++ b/css/styles.css
@@ -402,6 +402,57 @@ h3 {
 	letter-spacing: 0.02em;
 	margin-bottom: 16px;
 }
+
+.footer .subscribe {
+	display: flex;
+	flex-direction: column;
+	gap: 16px;
+}
+.footer .subscribe p {
+	color: var(--white);
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	margin-bottom: 16px;
+}
+.footer .subscribe form {
+	display: flex;
+	gap: 24px;
+}
+.footer .subscribe form input {
+	width: 264px;
+	height: 40px;
+	border: 1px solid var(--white);
+	background-color: transparent;
+	font-size: 12px;
+	line-height: 2;
+	letter-spacing: 0.04em;
+	padding-left: 16px;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+	color: var(--white);
+}
+.footer .subscribe form input::placeholder {
+	color: var(--white);
+}
+.footer .subscribe form button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 1.5;
+	letter-spacing: 0.04em;
+	min-width: 165px;
+	height: 40px;
+	cursor: pointer;
+	background-color: var(--primary);
+	border: none;
+	border-radius: 4px;
+	color: var(--white);
+}
 .footer .socials .icons {
 	display: flex;
 	justify-content: center;
@@ -451,7 +502,7 @@ svg.icon {
 	z-index: 999;
 	opacity: 0;
 	pointer-events: none;
-	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	background-color: rgba(46, 47, 66, 0.4);
 }
 
@@ -467,23 +518,24 @@ svg.icon {
 	width: 100%;
 	margin-top: 24px;
 	border: 0;
+	margin-bottom: 8px;
 }
 
 .modal-overlay .form-label {
-	display: flex;
-	flex-direction: column;
-	gap: 4px;
+	display: block;
 	font-size: 12px;
 	font-weight: 400;
-	line-height: 1.2;
+	line-height: 1.17;
 	letter-spacing: 0.04em;
+	margin-bottom: 4px;
 	color: var(--subtle-text);
 }
 .modal-overlay svg.icon {
 	color: var(--dark);
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-overlay .form-label.terms {
+.modal-overlay .terms {
 	flex-direction: row;
 	width: 100%;
 }
@@ -492,11 +544,12 @@ svg.icon {
 	position: relative;
 	width: 100%;
 	height: 40px;
-	padding: 8px 16px 8px 38px;
+	padding-left: 38px;
 	border-radius: 4px;
 	color: var(--dark);
 	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	border: 1px solid rgba(46, 47, 66, 0.4);
+	background-color: transparent;
 }
 
 .modal-overlay .form-input[type="checkbox"] {
@@ -550,14 +603,16 @@ svg.icon {
 
 .modal-overlay .input-container .icon {
 	position: absolute;
-	margin-left: 16px;
+	left: 16px;
+	top: 50%;
+	transform: translateY(-50%);
 }
 
 .modal-overlay .form-input::placeholder {
 	color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-overlay .form-label textarea.form-input {
+.modal-overlay textarea.form-input {
 	height: 120px;
 	padding: 8px 16px;
 	resize: none;
@@ -584,10 +639,10 @@ svg.icon {
 	background-color: var(--pressed);
 }
 
-.modal-overlay .form-label .form-input:focus,
-.modal-overlay .form-label .form-input:focus-visible,
-.modal-overlay .form-label .form-input:active {
-	border: 1px solid var(--primary);
+.modal-overlay .form-input:focus,
+.modal-overlay .form-input:focus-visible,
+.modal-overlay .form-input:active {
+	border-color: var(--primary);
 }
 
 .modal-overlay .form-input:focus ~ .icon,
@@ -597,6 +652,9 @@ svg.icon {
 }
 
 .modal-overlay .close {
+	position: absolute;
+	top: 24px;
+	right: 24px;
 	display: flex;
 	align-self: end;
 	justify-content: center;
@@ -604,14 +662,18 @@ svg.icon {
 	width: 24px;
 	height: 24px;
 	border-radius: 50%;
+	padding: 0;
+	cursor: pointer;
 	border: 1px solid rgba(0, 0, 0, 0.1);
-	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	background-color: var(--accent);
 }
 
-.modal-overlay .close:hover {
+.modal-overlay .close:hover,
+.modal-overlay .close:active {
 	cursor: pointer;
 	fill: var(--white);
+	border: none;
 	background-color: var(--pressed);
 }
 
@@ -621,21 +683,25 @@ svg.icon {
 	font-weight: 500;
 	line-height: 1.5;
 	letter-spacing: 0.02em;
-	margin-bottom: 8px;
+	margin-bottom: 16px;
 	color: var(--dark);
 }
 
 .modal-overlay .modal {
+	position: absolute;
+	top: 50%;
+	left: 50%;
 	display: flex;
 	flex-direction: column;
-	max-width: 408px;
-	max-height: 584px;
-	padding: 24px;
+	width: 408px;
+	min-height: 584px;
+	padding: 72px 24px 24px 24px;
 	border-radius: 4px;
 	overflow-y: auto;
 	box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
 									0px 1px 3px 0px rgba(0, 0, 0, 0.12),
 									0px 2px 1px 0px rgba(0, 0, 0, 0.2);
+	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	background-color: var(--modal);
 }
 
