--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ button {
 	border: 0;
 }
 input, textarea {
-	outline: none;
+	outline: transparent;
 }
 body {
 	font-family: "Roboto", sans-serif;
@@ -549,7 +549,7 @@ svg.icon {
 	padding-left: 38px;
 	border-radius: 4px;
 	color: var(--dark);
-	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	border: 1px solid rgba(46, 47, 66, 0.4);
 	background-color: transparent;
 }
@@ -563,7 +563,7 @@ svg.icon {
     -moz-appearance: none;
     -o-appearance: none;
     appearance: none;
-	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	border: 1px solid rgba(46, 47, 66, 0.4);
 }
 
@@ -599,11 +599,12 @@ svg.icon {
 }
 
 .modal-overlay .input-container {
+	position: relative;
 	display: flex;
 	align-items: center;
 }
 
-.modal-overlay .input-container .icon {
+.modal-overlay .input-container svg {
 	position: absolute;
 	left: 16px;
 	top: 50%;
@@ -684,7 +685,7 @@ svg.icon {
 	background-color: var(--pressed);
 }
 
-.modal-overlay .form-group .group-title {
+.modal-overlay .group-title {
 	text-align: center;
 	font-size: 16px;
 	font-weight: 500;
