--- a/css/styles.css
+++ b/css/styles.css
@@ -401,7 +401,6 @@ h3 {
 .footer .subscribe {
 	display: flex;
 	flex-direction: column;
-	gap: 16px;
 	margin-left: 80px;
 }
 .footer .subscribe form {
@@ -409,7 +408,9 @@ h3 {
 	gap: 24px;
 }
 .footer .subscribe p {
+	margin-bottom: 16px;
 	font-size: 16px;
+	font-weight: 500;
 	line-height: 1.5;
 	letter-spacing: 0.02em;
 	color: var(--white);
@@ -432,14 +433,19 @@ h3 {
 }
 .footer .subscribe form button {
 	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 165px;
+	min-width: 165px;
 	height: 40px;
 	padding: 8px 24px;
-	gap: 16px;
+	font-weight: 500;
+	line-height: 1.5;
+	letter-spacing: 0.04em;
+	cursor: pointer;
+	border-radius: 4px;
 	color: var(--white);
 	background-color: var(--primary);
+}
+.footer .subscribe form button svg {
+	margin-left: 16px;
 }
 .footer .socials p {
 	color: var(--white);
@@ -488,9 +494,6 @@ svg.icon {
 	position: fixed;
 	top: 0;
 	left: 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	width: 100%;
 	height: 100%;
 	z-index: 999;
@@ -547,6 +550,7 @@ svg.icon {
 	padding-left: 38px;
 	border-radius: 4px;
 	color: var(--dark);
+	outline: transparent;
 	transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	border: 1px solid rgba(46, 47, 66, 0.4);
 	background-color: transparent;
@@ -635,6 +639,7 @@ svg.icon {
 	font-size: 12px;
 	line-height: 1.17;
 	letter-spacing: 0.04em;
+	outline: transparent;
 	color: rgba(46, 47, 66, 0.4);
 	border: 1px solid rgba(46, 47, 66, 0.4);
 	transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -737,6 +742,8 @@ svg.icon {
 
 .modal-overlay .modal {
 	position: absolute;
+	top: 50%;
+	left: 50%;
 	display: flex;
 	flex-direction: column;
 	width: 408px;
@@ -748,6 +755,7 @@ svg.icon {
 									0px 1px 3px 0px rgba(0, 0, 0, 0.12),
 									0px 2px 1px 0px rgba(0, 0, 0, 0.2);
 	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transform: translate(-50%, -50%);
 	background-color: var(--modal);
 }
 
